CMRARC-522 fix spacing in mmt button

--- a/app/assets/stylesheets/pages/_show-collection.scss
+++ b/app/assets/stylesheets/pages/_show-collection.scss
@@ -19,6 +19,7 @@
     border-bottom-width: 1px;
     border-bottom-color: $gray-dark;
     display: inline-block;
+    flex-grow: 1;
 
     h3 {
       margin-bottom: 5px;
@@ -113,6 +114,7 @@
 }
 
 .edit_collection_in_mmt_link {
+  width: 250px;
   margin-right: 50px;
 }
 
